// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TransactionRowMobile > should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group !border-b-0 css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-170792"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-50"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (DARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 DARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group !border-b-0 css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-170792"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-50"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <span
                          class="font-semibold text-sm text-theme-text"
                          data-testid="Address__alias"
                        >
                          <span
                            class="no-ligatures css-9nx3be"
                            data-testid="TruncateEnd"
                          >
                            ARK Wallet 1
                          </span>
                        </span>
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-secondary-700 dark:text-theme-secondary-500 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (DARK)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 DARK
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render skeleton responsive 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TransactionRow__skeleton"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 120px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Date
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 160px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="mr-4 flex items-center space-x-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <div
              class="mr-4 flex items-center space-x-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Amount
            </div>
            <div
              class="flex h-7 items-center space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Currency
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 0px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render skeleton responsive 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          class="flex-col space-y-4 py-4"
          data-testid="TransactionRow__skeleton"
        >
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              ID
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 120px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Date
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 160px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Sender
            </div>
            <div
              class="mr-4 flex items-center space-x-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Recipient
            </div>
            <div
              class="mr-4 flex items-center space-x-2"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 20px; height: 20px; border-radius: 50%;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Amount
            </div>
            <div
              class="flex h-7 items-center space-x-1"
            >
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 1px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
              <span
                aria-busy="true"
                aria-live="polite"
                class="flex w-auto max-w-full items-center overflow-hidden leading-none"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 35px; height: 16px;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
          <div
            class="flex items-center justify-between space-x-4"
          >
            <div
              class="text-md group relative m-0 select-none border-theme-secondary-300 text-left font-semibold text-theme-secondary-700 first:pl-0 last:pr-0 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
            >
              Currency
            </div>
            <span
              aria-busy="true"
              aria-live="polite"
              class="flex w-auto max-w-full items-center overflow-hidden leading-none"
            >
              <span
                class="react-loading-skeleton"
                style="width: 0px; height: 16px;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render with currency 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group !border-b-0 css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-170792"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-30"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-primary-600 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (BTC)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`TransactionRowMobile > should render with currency 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="group !border-b-0 css-16ynu5g"
        data-testid="TableRow"
      >
        <td
          data-testid="TableRow__mobile"
        >
          <div
            class="w-full cursor-pointer overflow-hidden rounded border border-theme-secondary-300 bg-white dark:border-theme-secondary-800 dark:bg-theme-secondary-900 mb-3"
          >
            <div
              class="flex h-10 w-full items-center justify-between bg-theme-secondary-100 px-4 dark:bg-black"
            >
              <a
                class="ring-focus group inline-block text-sm font-semibold css-7nwwrh"
                data-ring-focus-margin="-m-1"
                data-testid="Link"
                href="https://live.arkscan.io/transaction/ee4175091d9f4dacf5fed213711c3e0e4cc371e37afa7bce0429d09bcf3ecefe"
                rel="noopener noreferrer"
              >
                <span
                  class="css-170792"
                >
                  <span
                    class="no-ligatures cursor-pointer text-theme-primary-600 css-0"
                    data-testid="TruncateMiddle"
                  >
                    ea63b…5c79b
                  </span>
                </span>
              </a>
              <div
                class="flex flex-row items-center"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 sm:block"
                  data-testid="TransactionRow__timestamp"
                >
                  <span
                    data-testid="TimeAgo"
                  >
                    A few seconds ago
                  </span>
                </span>
              </div>
            </div>
            <div
              class="flex w-full flex-col gap-4 px-4 pb-4 pt-3 sm:grid sm:grid-cols-[200px_auto_130px] sm:pb-2"
            >
              <div
                class="flex flex-col gap-2 w-full"
                data-testid="TransactionRowMobile__label"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Transfer
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="flex flex-row gap-2"
                    data-testid="TransactionRowAddressing__container"
                  >
                    <div
                      class="!flex h-[21px] w-10 items-center justify-center rounded py-[3px] css-r9b6qf"
                      color="danger-bg"
                      data-testid="TransactionRowAddressing__label"
                    >
                      To
                    </div>
                    <div
                      class="w-30"
                      data-testid="TransactionRowAddressing__address-container"
                    >
                      <div
                        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                      >
                        <div
                          class="relative grow text-left"
                        >
                          <span
                            class="no-ligatures min-w-0 overflow-hidden md:pt-0.5 text-theme-primary-600 font-semibold text-sm absolute w-full"
                            data-testid="Address__address"
                          >
                            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
                          </span>
                          <span>
                             
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Value (BTC)
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <div
                    class="rounded px-1.5 css-xqt0aw"
                    color="danger-bg"
                    data-testid="AmountLabel__wrapper"
                  >
                    <div
                      class="flex space-x-1 items-center"
                    >
                      <span
                        class="whitespace-nowrap text-sm"
                        data-testid="Amount"
                      >
                        - 121 BTC
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col gap-2 w-full"
              >
                <span
                  class="text-sm font-semibold text-theme-secondary-700 dark:text-theme-secondary-500"
                >
                  Fiat Value
                </span>
                <div
                  class="text-sm font-semibold text-theme-secondary-900 dark:text-theme-secondary-200"
                >
                  <span
                    class="whitespace-nowrap"
                    data-testid="Amount"
                  >
                    0 BTC
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
